# emittra

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  index.html
include/: emittra.hpp
src/: benchmark.cpp  emittra.cpp
